--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<marquee behavior="scroll" direction="right" height="100" width="500" bgcolor="Pink" 
+<marquee behavior="scroll" direction="left" height="100" width="500" bgcolor="Pink" 
            onmouseover="this.stop();"
            onmouseout="this.start();"><b><h1>Sushma Manjunath Malode</h1></b></marquee>
 </html>
